--- a/CompanyService.properties
+++ b/CompanyService.properties
@@ -5,4 +5,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8091
-eureka.client.serviceUrl.defaultZone=http://localhost:8083/eureka/
+eureka.client.serviceUrl.defaultZone=http://configserver:8083/eureka/
